# JuEngine

./: .gitignore  CMakeLists.txt  README.md
JuEngine/: App.cpp  App.hpp  AppController.cpp  AppController.hpp  Application.cpp  Application.hpp  DllExport.hpp  INonCopyable.hpp  IObject.hpp  Includes.hpp  Math.hpp  Math.inl  OpenGL.hpp  StdDefines.hpp
JuEngine/Components/: Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  Light.cpp  Light.hpp  MeshRenderer.cpp  MeshRenderer.hpp  RigidBody.cpp  RigidBody.hpp  ScriptBehaviour.hpp  Transform.cpp  Transform.hpp  World.cpp  World.hpp
JuEngine/ECS/: Component.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp
JuEngine/Entity/: ComponentTypeId.cpp  ComponentTypeId.hpp  Entity.cpp  Entity.hpp  Group.cpp  Group.hpp  GroupEventType.hpp  GroupObserver.cpp  GroupObserver.hpp  IComponent.hpp  ISystem.hpp  Matcher.cpp  Matcher.hpp  Pool.cpp  Pool.hpp  ReactiveSystem.cpp  ReactiveSystem.hpp  SystemContainer.cpp  SystemContainer.hpp  TriggerOnEvent.hpp
JuEngine/ImGui/: imconfig.hpp  imgui.cpp  imgui.hpp  imgui_draw.cpp
JuEngine/ImGui/impl/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
JuEngine/Managers/: AppTimeManager.cpp  AppTimeManager.hpp  DataManager.cpp  DataManager.hpp  EntityManager.cpp  EntityManager.hpp  InputDefines.hpp  InputManager.cpp  InputManager.hpp  LevelManager.cpp  LevelManager.hpp  LogManager.cpp  LogManager.hpp  MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PoolManager.cpp  PoolManager.hpp  PrefabManager.cpp  PrefabManager.hpp  ShaderManager.cpp  ShaderManager.hpp  SystemManager.cpp  SystemManager.hpp  TimeManager.cpp  TimeManager.hpp  TimerCallbackManager.cpp  TimerCallbackManager.hpp  TimerManager.cpp  TimerManager.hpp  WindowManager.cpp  WindowManager.hpp
JuEngine/Resources/: Clock.cpp  Clock.hpp  DebugBar.cpp  DebugBar.hpp  DebugLog.cpp  DebugLog.hpp  Delegate.hpp  Entity.cpp  Entity.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  INonCopyable.hpp  IObject.hpp  Identifier.cpp  Identifier.hpp  Level.cpp  Level.hpp  Material.cpp  Material.hpp  Math.hpp  Math.inl  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  MeshNode.cpp  MeshNode.hpp  Prefab.cpp  Prefab.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  TimerCallback.cpp  (+1 more)
JuEngine/Services/: IAppController.hpp  IDataService.hpp  IInputService.hpp  ILevelService.hpp  ILogService.hpp  ISystemService.hpp  ITimeService.hpp  IWindowService.hpp
